fixed z-index of a few things

--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,7 @@ section {
     width: 80%;
     max-width: 900px;
     opacity: 0.7;
+    z-index: 50;
 }
 
 section h1 {
@@ -105,7 +106,6 @@ nav {
     opacity: 0.9;
     border: 4px solid #1a7346;
     flex-wrap: wrap;
-    z-index: 10;
     position: fixed;
     top: 10px;
     width: 100%;
